welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:9: error: ';' expected but 'else' found.
    }else{
     ^withoutDoubles:14: error: Unmatched closing brace '}' ignored here
 }
 ^